[package]
name = "pipeviewer"
version = "0.1.0"
edition = "2021"
authors = ["Stone C. Lasley <stone@lasley.io>"]
description = "Educational version of pipeviewer"
homepage= "https://github.com/stonelasley/pipeviewer"
repository = "https://github.com/stonelasley/pipeviewer"
readme = "README.md"
keywords = ["Udemy", "Tutorial", "Education"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
crossbeam = "0.7.3"
crossterm = "0.14.2"
